# paper-digester

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
notes/: INDEX.md  attention-is-all-you-need.md
notes/notes/: INDEX.md
src/paper_digester/: arxiv_fetch.py  cli.py  config.py  core.py  diagram.py  pdf_extract.py  summarizer.py  utils.py  web.py
tests/: test_config.py  test_core.py  test_pdf_extract.py  test_summary_and_assets.py  test_summary_and_index.py  test_web_upload.py
